unpackaged/main/default/objects/SDO_Service_openCTIconfig__c/SDO_Service_openCTIconfig__c.object-meta.xml
<CustomObject>
    <description>What: Service object for CTI Config. Who:Service team.</description>
    <label>Lightning CTI Config</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>openCTIconfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning CTI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>