unpackaged/main/default/objects/SDO_Service_openCTIconfig__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>openCTIconfigs</relationshipName>
    <type>Lookup</type>
</CustomField>