unpackaged/main/default/objects/SDO_Service_openCTIconfig__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>ContactName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>