unpackaged/main/default/objects/SDO_Service_openCTIconfig__c/fields/popContact__c.field-meta.xml
<CustomField>
    <fullName>popContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>popContact</label>
    <type>Checkbox</type>
</CustomField>